@@ -543,18 +543,6 @@ class SimpleLDAPObject:
   def search_st(self,base,scope,filterstr='(objectClass=*)',attrlist=None,attrsonly=0,timeout=-1):
     return self.search_ext_s(base,scope,filterstr,attrlist,attrsonly,None,None,timeout)
 
-  def set_cache_options(self,*args,**kwargs):
-    """
-    set_cache_options(option) -> None    
-        Changes the caching behaviour. Currently supported options are
-            CACHE_OPT_CACHENOERRS, which suppresses caching of requests
-                that resulted in an error, and
-            CACHE_OPT_CACHEALLERRS, which enables caching of all requests.
-        The default behaviour is not to cache requests that result in
-        errors, except those that result in a SIZELIMIT_EXCEEDED exception.
-    """
-    return self._ldap_call(self._l.set_cache_options,*args,**kwargs)
-
   def start_tls_s(self):
     """
     start_tls_s() -> None    
